--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "@mui/lab": "^5.0.0-alpha.98",
     "@mui/material": "^5.10.4",
     "@mui/styled-engine-sc": "^5.10.3",
+    "@mui/x-date-pickers": "^5.0.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "dayjs": "^1.11.5",
     "firebase": "^9.9.4",
     "notistack": "^2.0.5",
     "react": "^18.2.0",
