--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.27.2",
     "dayjs": "^1.11.5",
     "firebase": "^9.9.4",
     "notistack": "^2.0.5",
@@ -24,6 +25,7 @@
     "react-number-format": "^5.0.0-beta.4",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "recharts": "^2.1.14",
     "styled-components": "^5.3.5",
     "validator": "^13.7.0",
     "web-vitals": "^2.1.4"
